--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^17.0.42",
     "@types/xml2js": "^0.4.11",
     "express": "^4.18.1",
+    "iconv-lite": "^0.6.3",
     "ts-node": "^10.8.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.3",
