--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "start": "ts-node-dev main.ts",
+    "start": "ts-node-dev src/main.ts",
     "test": "jest",
     "build": "tsc"
   },
@@ -13,9 +13,13 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.42",
+    "@types/query-string": "^6.3.0",
     "@types/xml2js": "^0.4.11",
     "express": "^4.18.1",
     "iconv-lite": "^0.6.3",
+    "install": "^0.13.0",
+    "query-string": "^8.1.0",
+    "querystring": "^0.2.1",
     "ts-node": "^10.8.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.3",
